--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,8 @@
     <div class="back">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-1"></div>
+                <div class="col-md-5">
                     <h3 class="mt-5">Create your Rocket</h3>
                     <form id="rocketForm" class="mt-4">
                         <div class="row mb-4">
@@ -42,21 +43,21 @@
                     </form>
 
                     <div class="row">
-                        <div class="col">
+                        <div class="col mt-2">
                             <button id="createRocket" type="button" class="btn btn-secondary mb-4" onclick="createRocketUser()">Create Rocket</button>
                             <button id="printRocket" type="button" class="btn btn-print mb-4" onclick="printRocketUser()">Print Rocket</button>
                             <button id="acelerateRocket" type="button" class="btn btn-acelerate mb-4" onclick="acelerateRocketUser()">Acelerated Rocket</button>
                             <button id="subtractRocket" type="button" class="btn btn-subtract mb-4" onclick="breakRocketUser()">Subtract Rocket</button>
                         </div>
-                        <div class="col">
+                        <div class="col mt-2">
                             <i id="rocketDraw-rocketUser" class="fas fa-rocket no-display-rocketUser mb-4"></i>
                             <p id="rocketInfo"></p>
                             <p id="rocketInfoUser"></p>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-6 mt-5">
+                <div class="col-md-1"></div>
+                <div class="col-md-5 mt-5">
                     <div class="row">
                         <div class="col">
                             <button id="createRocket1" type="button" class="btn btn-create mb-4" onclick="createRocket1()">Create Rocket 1</button>
@@ -66,13 +67,12 @@
                         </div>
 
                         <div class="col">
-                            <p class="iconRocket"></p><i id="rocketDraw-rocket1" aria-hidden="true" class="fas fa-rocket no-display-rocket1"></i></p>
+                            <i id="rocketDraw-rocket1" class="fas fa-rocket no-display-rocket1 mb-4"></i>
                             <p id="rocketInfo1"></p>
                         </div>
                     </div>
-                    <br><br>
 
-                    <div class="row">
+                    <div class="row mt-4">
                         <div class="col">
                             <button id="createRocket2" type="button" class="btn btn-create mb-4" onclick="createRocket2()">Create Rocket 2</button>
                             <button id="printRocket2" type="button" class="btn btn-print mb-4" onclick="printRocket2()">Print Rocket 2 info</button>
@@ -80,7 +80,7 @@
                             <button id="subtractRocket2" type="button" class="btn btn-subtract mb-4" onclick="breakRocket2()">Subtract Rocket 2</button>
                         </div>
                         <div class="col">
-                            <i id="rocketDraw-rocket2" class="fas fa-rocket no-display-rocket2"></i>
+                            <i id="rocketDraw-rocket2" class="fas fa-rocket no-display-rocket2 mb-4"></i>
                             <p id="rocketInfo2"></p>
                         </div>
                     </div>
