--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="back">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row space">
                 <div class="col-md-1"></div>
                 <div class="col-md-5">
                     <h3 class="mt-5">Create your Rocket</h3>
@@ -42,7 +42,7 @@
                         </div>
                     </form>
 
-                    <div class="row">
+                    <div class="row space">
                         <div class="col mt-2">
                             <button id="createRocket" type="button" class="btn btn-secondary mb-4" onclick="createRocketUser()">Create Rocket</button>
                             <button id="printRocket" type="button" class="btn btn-print mb-4" onclick="printRocketUser()">Print Rocket</button>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-5 mt-5">
-                    <div class="row">
+                    <div class="row space">
                         <div class="col">
                             <button id="createRocket1" type="button" class="btn btn-create mb-4" onclick="createRocket1()">Create Rocket 1</button>
                             <button id="printRocket1" type="button" class="btn btn-print mb-4" onclick="printRocket1()">Print Rocket 1 info</button>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div class="row mt-4">
+                    <div class="row space mt-4">
                         <div class="col">
                             <button id="createRocket2" type="button" class="btn btn-create mb-4" onclick="createRocket2()">Create Rocket 2</button>
                             <button id="printRocket2" type="button" class="btn btn-print mb-4" onclick="printRocket2()">Print Rocket 2 info</button>
@@ -85,6 +85,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-xxl-4 mt-5"></div>
             </div>
         </div>
     </div>
