--- a/views/index.html
+++ b/views/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <div class="back">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row space">
                 <div class="col-md-1"></div>
-                <div class="col-md-5">
+                <div class="col-md-5 col-sm-4">
                     <h3 class="mt-5">Create your Rocket</h3>
                     <form id="rocketForm" class="mt-4">
                         <div class="row mb-4">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-md-1"></div>
-                <div class="col-md-5 mt-5">
+                <div class="col-md-5 col-sm-4 mt-5">
                     <div class="row space">
                         <div class="col">
                             <button id="createRocket1" type="button" class="btn btn-create mb-4" onclick="createRocket1()">Create Rocket 1</button>
